--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,7 @@
 name: SnowballGame
 main: com.github.kanesada2.SnowballGame.SnowballGame
 version: 1.1.9
+api-version: 1.19
 commands:
     SnowballGame:
       description: get SnowballGame's items.
