--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -16,7 +16,7 @@ Ball:
           - 'Fast'
           - 'Slider'
           - 'Curve'
-          - 'Fork'
+          - 'Folk'
           - 'Sinker'
           - 'Shuuto'
           - 'Knuckle'
@@ -41,7 +41,7 @@ Ball:
             Vertical: -0.02
             Horizontal: -0.02
             Acceleration: -0.01
-        Fork:
+        Folk:
             Velocity: 1
             Vertical: -0.02
             Horizontal: 0
