--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: SnowballGame
 main: com.github.kanesada2.SnowballGame.SnowballGame
-version: 1.1.9DSPIGOT1.13~
-api-version: 1.13
+version: 1.1.9
+api-version: 1.19
 commands:
     SnowballGame:
       description: get SnowballGame's items.
